# Dev_Request

./: CMakeLists.txt  CMakeSettings.json  MyCodeMacros.cmake  MyGlobalImports.cmake  MyLocalImports.cmake  MySpecial.cmake  README.md
CommonLib/: cmnPriorities.h  cmnShare.cpp  cmnShare.h  procoMsg.cpp  procoMsg.h  procoMsgBase.cpp  procoMsgBase.h  rgbMsg.cpp  rgbMsg.h  rgbMsgBase.cpp  rgbMsgBase.h  someSerialParms.cpp  someSerialParms.h
MsgRequester/: CMakeLists.txt  MainInit.cpp  someRequesterThread.cpp  someRequesterThread.h
MsgResponder/: CMakeLists.txt  CmdLineExec.cpp  someMonitorThread.cpp  someResponderThread.cpp
MsgScriptRunner/: CMakeLists.txt  MainInit.cpp  someMonitorThread.cpp  someScriptRunnerThread_test.cpp
Requester/: someMonitorThread.cpp  someMonitorThread.h  someRequesterThread.cpp  someRequesterThread.h
Responder/: CMakeLists.txt  CmdLineExec.cpp  Main.cpp  MainInit.cpp  someMonitorThread.cpp  someMonitorThread.h  someResponderThread.cpp  someResponderThread.h
ScriptRunner/: CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  someScriptRunnerThread.h  someScriptRunnerThread_run_script.cpp  someScriptRunnerThread_rx.cpp  someScriptRunnerThread_test.cpp  someScriptRunnerThread_thread.cpp
Stash/: pxPrinterParms.cpp  pxPrinterParms.h  pxScriptRunner.cpp  pxScriptRunner.h  pxScriptSeqThread.h  pxScriptSeqThread_run_script.cpp  pxScriptSeqThread_test.cpp  pxScriptSeqThread_thread.cpp  someScriptRunnerThread.cpp  someScriptRunnerThread.h
StringRequester/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  (+3 more)
(+15 files in other folders)
